<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear Saved Elections</string>

    <string name="button_upcoming_selections">Upcoming Elections</string>
    <string name="button_representatives">Find My Representatives</string>
    <string name="button_follow_election">Follow Election</string>
    <string name="button_unfollow_election">Unfollow Election</string>
    <string name="button_location">Use My Location</string>

    <string name="text_upcoming_elections">Upcoming Elections</string>
    <string name="text_saved_elections">Saved Elections</string>
    <string name="text_election_information">Election Information</string>
    <string name="text_voting_locations">Voting Locations</string>
    <string name="text_ballot_information">Ballot Information</string>
    <string name="text_representative_search">Representative Search</string>
    <string name="text_representatives">My Representatives</string>

    <string name="hint_address_1">Address Line 1</string>
    <string name="hint_address_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip Code</string>

    <string name="empty_representatives">Representatives Unavailable</string>

    <string name="error_connection">Network unavailable. Unable to view upcoming elections.</string>

    <string name="button_ok">@android:string/ok</string>

    <string name="dialog_title_error_net">Network Error</string>

    <string name="permission_denied_explanation">Location services must be enabled to use this feature.</string>

    <string name="accessibility_logo">App Logo</string>
    <string name="accessibility_loading">Loading Data</string>
    <string name="accessibility_photo">Representative Photo</string>
    <string name="accessibility_www">Representative Web</string>
    <string name="accessibility_fb">Representative Facebook</string>
    <string name="accessibility_twitter">Representative Twitter</string>

</resources>
