<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_horizontal"
        android:paddingTop="@dimen/margin_vertical"
        android:paddingEnd="@dimen/margin_horizontal"
        android:paddingBottom="@dimen/margin_vertical"
        app:layoutDescription="@xml/fragment_launch_scene"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/launchImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/accessibility_logo"
            android:src="@drawable/ballot_logo" />

        <Button
            android:id="@+id/upcomingButton"
            style="@style/Political_Button"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/button_upcoming_selections" />

        <Button
            android:id="@+id/representativeButton"
            style="@style/Political_Button"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/button_representatives" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>