<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white"
            tools:title="New York Presidential Primary Election" />

        <TextView
            android:id="@+id/election_date"
            style="@style/Political_Text.Small"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            app:date="@{viewModel.election.electionDay}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="Tue Apr 07 00:00:00 EDT 2020" />

        <TextView
            android:id="@+id/state_header"
            style="@style/Political_Text.Medium"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/text_election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/Political_Text.Small.Bold"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/text_voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:url="@{viewModel.administration.votingLocationFinderUrl}" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/Political_Text.Small.Bold"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/text_ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:url="@{viewModel.administration.ballotInfoUrl}" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/Political_Text.Medium"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@{viewModel.administration.name}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="State Board of Elections" />

        <TextView
            android:id="@+id/address"
            style="@style/Political_Text.Small"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@{viewModel.administration.correspondenceAddress.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="40 North Pearl Street, Suite 5\nAlbany, New York 12207" />

        <Button
            android:id="@+id/followButton"
            style="@style/Political_Button"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:text="@{viewModel.followedElection == null ? @string/button_follow_election : @string/button_unfollow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/button_follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>